--- a/config.toml
+++ b/config.toml
@@ -73,10 +73,10 @@ URL = "contact"
 weight = 7
 
 #### external / static link ####
-[[menu.static]]
-name = "Themefisher"
-URL = "https://themefisher.com/"
-weight = 8
+#[[menu.static]]
+#name = "Themefisher"
+#URL = "https://themefisher.com/"
+#weight = 8
 
 ############################# Default Parameters ##########################
 [params]
@@ -119,6 +119,9 @@ link = "#"
 icon = "ti-pinterest" # themify icon pack : https://themify.me/themify-icons
 link = "#"
 
+[[params.social]]
+icon = "icons/pixelfed.svg"
+link = "https://pixelfed.de/nesakko"
 
 ################################ English Language ########################
 [Languages.en]
@@ -127,7 +130,7 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 home = "Home"
-copyright = "copyright &copy; 2019 [gethugothemes](https://gethugothemes.com) all right reserved"
+copyright = "Helloworld"
 
 ################################ France Language ########################
 [Languages.fr]
@@ -136,4 +139,4 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
-copyright = "copyright et copie; 2019 [gethugothemes] (https://gethugothemes.com) tous droits réservés"
+copyright = "Helloworld"
