--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -11,6 +11,6 @@ about:
     title : We're Professional
     content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
 
-  - icon : ti-thought # themify icon pack : https://themify.me/themify-icons
+  - icon : fa fa-pixelfed # themify icon pack : https://themify.me/themify-icons
     title : We're Genius
     content : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos provident laborum eum dignissimos.
